java-fx: rebase upon mvvmfx spring-boot javafx with drag and drop